--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -1,8 +1,26 @@
 version: "3.9"
 
 services:
+  carowner-service:
+    container_name: carowner-service
+    build:
+      context: ..
+      dockerfile: ./car-owner-service/Dockerfile
+    ports:
+      - 8080:8080
+      - 5005:5005
+    environment:
+      - DB_URL=jdbc:postgresql://postgres_carowner_db:5432/carowner
+      - DB_USERNAME=admin
+      - DB_PASSWORD=admin
+    networks:
+      carownernet:
+    depends_on:
+      postgres_carowner_db:
+        condition: service_healthy
+
   postgres_carowner_db:
-    image: postgres:14.1
+    image: postgres:14.5
     container_name: postgres_carowner_db
     hostname: postgres_carowner_db
     deploy:
