manual k8s deployment added

--- a/jkube-test/src/k8s/carservice-deployment.yml
+++ b/jkube-test/src/k8s/carservice-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: car-service
-          image: localhost:5000/car-owner-service:0.0.1
+          image: localhost:5000/car-owner-service
           ports:
             - containerPort: 8080
           env:
