--- a/car-owner-ui/Dockerfile.prod
+++ b/car-owner-ui/Dockerfile.prod
@@ -1,5 +1,5 @@
-FROM nginx:stable AS deploy
+FROM nginx:stable
 
-COPY ./build /usr/share/nginx/html/
+COPY ./build/ /usr/share/nginx/html/
 
 EXPOSE 80 80
