--- a/car-owner-ui/Dockerfile
+++ b/car-owner-ui/Dockerfile
@@ -1,14 +1,5 @@
-FROM node:lts AS builder
-WORKDIR /usr/src/app
-
-COPY ./package*.json ./
-RUN npm install
-
-COPY ./ ./
-RUN npm run build
-
-FROM nginx:stable AS deploy
-
-COPY --from=builder /usr/src/app/dist/car-owner-ui/ /usr/share/nginx/html/
+FROM nginx:stable
+COPY maven/car-owner-ui /usr/share/nginx/html/
+COPY maven/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80 80
