--- a/car-owner-service/k8s/ingress.yaml
+++ b/car-owner-service/k8s/ingress.yaml
@@ -3,16 +3,32 @@ kind: Ingress
 metadata:
   name: minimal-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: 'nginx'
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
-  ingressClassName: nginx-example
+  ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: "/"
+          - path: /api/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: car-owner-service
+                port:
+                  number: 8080
+          - path: /?(.*)
             pathType: Prefix
             backend:
               service:
                 name: car-owner-ui
                 port:
                   number: 80
+
+
+#spec:
+#  defaultBackend:
+#    service:
+#      name: car-owner-ui
+#      port:
+#        number: 80
