--- a/ui-template/angular.json
+++ b/ui-template/angular.json
@@ -105,7 +105,8 @@
           "builder": "@storybook/angular:start-storybook",
           "options": {
             "browserTarget": "angular-cli:build",
-            "port": 6006
+            "port": 6006,
+            "styles": ["src/styles.scss"]
           }
         },
         "build-storybook": {
@@ -113,7 +114,6 @@
           "options": {
             "browserTarget": "angular-cli:build"
           }
-
         }
       }
     }
